--- a/index.html
+++ b/index.html
@@ -1,32 +1,63 @@
+
 <!DOCTYPE html>
 <html>
 <head>
   <style>
-    .animated-text {
-      font-size: 40px;
-      font-weight: bold;
-      text-align: center;
-      animation: textAnimation 4s infinite;
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #f0f0f0;
     }
 
-    @keyframes textAnimation {
-      0% { transform: scale(1) rotate(0deg); color: blue; }
-      25% { transform: scale(1.2) rotate(90deg); color: red; }
-      50% { transform: scale(1.4) rotate(180deg); color: green; }
-      75% { transform: scale(1.2) rotate(270deg); color: purple; }
-      100% { transform: scale(1) rotate(360deg); color: blue; }
+    .animated-text {
+      font-size: 4em;
+      font-weight: bold;
+      text-transform: uppercase;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+      animation: jump 2s infinite;
+      display: inline-block;
+    }
+
+    @keyframes jump {
+      0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+      }
+      40% {
+        transform: translateY(-30px);
+      }
+      60% {
+        transform: translateY(-15px);
+      }
+    }
+
+    .animated-text:nth-child(1) {
+      color: #FF0000;
+      animation-delay: 0s;
+    }
+
+    .animated-text:nth-child(2) {
+      color: #00FF00;
+      animation-delay: 0.5s;
+    }
+
+    .animated-text:nth-child(3) {
+      color: #0000FF;
+      animation-delay: 1s;
+    }
+
+    .animated-text:nth-child(4) {
+      color: #FF00FF;
+      animation-delay: 1.5s;
     }
   </style>
 </head>
 <body>
-  <div class="animated-text">变异螃蟹</div>
-
-  <script>
-    // 可选：如果您希望文本在页面加载时进行动画效果，可以使用 JavaScript 动态添加类名。
-    document.addEventListener('DOMContentLoaded', function() {
-      const text = document.querySelector('.animated-text');
-      text.classList.add('animated-text');
-    });
-  </script>
+  <div class="animated-text">变</div>
+  <div class="animated-text">异</div>
+  <div class="animated-text">螃</div>
+  <div class="animated-text">蟹</div>
 </body>
 </html>
