--- a/index.html
+++ b/index.html
@@ -59,5 +59,7 @@
   <div class="animated-text">异</div>
   <div class="animated-text">螃</div>
   <div class="animated-text">蟹</div>
+<a target="_blank" href="https://zh.y8.com/games/drunken_boxing_2"><img alt="Drunken Boxing 2" class="thumb playable" src="https://img.y8.com/cloud/v2-y8-thumbs-small-thumbnails-001/143552/small.gif" /><br>Drunken Boxing 2<br>开始游戏！</a>
+  
 </body>
 </html>
